--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 
     </title>
     <meta name="author" content="tansh">
-    <meta name="description" content="Tani Makmur Kita Makmur hadir sebagai pelopor inovasi pengolahan rumput laut berkualitas
-                                tinggi. Rumput laut mengandung kalsium sepuluh kali lebih tinggi dibandingkan susu,
-                                membantu mencegah osteoporosis dan menjaga kesehatan tulang. Selain itu, rumput laut
-                                kaya akan nutrisi esensial seperti omega-3, omega-6, vitamin A, B, C, D, E, dan K, serta
-                                mineral penting yang baik untuk pencernaan, kesehatan jantung, dan imunitas tubuh. Tidak
-                                hanya itu, rumput laut dikenal mampu mengabsorpsi logam berat dalam darah dan
-                                mengeluarkannya dari tubuh, menjadikannya sebagai superfood yang luar biasa.">
+    <meta name="description" content="Kami menyediakan berbagai pilihan beras berkualitas untuk memenuhi kebutuhan Anda. Mulai dari:
+ * Beras Premium: ButiranLong grain utuh, putih bersih, dan menghasilkan nasi yang pulen serta lezat.
+ * Beras Medium: Pilihan tepat untuk konsumsi sehari-hari dengan kualitas yang terjaga dan harga yang bersahabat.
+ * Beras Broken: Cocok untuk berbagai kebutuhan seperti pembuatan bubur atau pakan ternak dengan harga ekonomis.
+Selain menyediakan beras berkualitas, kami juga menawarkan layanan sewa penggilingan dan sewa drayer untuk membantu para petani dan pelaku usaha pengolahan padi.
+">
     <meta name="keywords" content="Tani Makmur Kita Makmur, Pupuk d'panen, d'panen">
 
     <!-- FAVICON FILES -->
@@ -582,7 +581,6 @@
                                 <!-- <li><i class="icon-envelope1"></i><a href="mailto:#">support@example.com</a></li> -->
                                 <li><i class="icon-map-pin1"></i>
                                     Desa Talok, Kecamatan Dlanggu, Kabupaten Mojokerto
-
                                 </li>
                             </ul>
                         </div>
