--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Selain menyediakan beras berkualitas, kami juga menawarkan layanan sewa penggili
                     <div class="main-navigation dtr-menu-light">
                         <ul class="sf-menu dtr-scrollspy dtr-nav light-nav-on-load dark-nav-on-scroll">
                             <li> <a class="nav-link" href="#home">Home</a> </li>
-                            <li> <a class="nav-link" href="#services">Layanan</a> </li>
+                            <li> <a class="nav-link" href="#services">Produk</a> </li>
                             <!-- <li> <a class="nav-link"
                                     href="https://arsy25.github.io/Bibit-Assegaf-Meranti-Products/"><b>Produk</b></a>
                             </li> -->
@@ -167,7 +167,7 @@ Selain menyediakan beras berkualitas, kami juga menawarkan layanan sewa penggili
                         <!-- column 1 ends -->
 
                         <!-- column 2 starts -->
-                        <div class="col-12 col-md-6 small-device-space"> <img src="assets/images/logo.jpeg" alt="image"
+                        <div class="col-12 col-md-6 small-device-space"> <img src="assets/images/logo.jpg" alt="image"
                                 class="dtr-rounded-img dtr-mb-minus50"> </div>
                         <!-- column 2 ends -->
 
