foto_video_done

--- a/index.html
+++ b/index.html
@@ -453,6 +453,39 @@ Selain menyediakan beras berkualitas, kami juga menawarkan layanan sewa penggili
                             </div>
                         </div>
                     </section>
+                    <section id="tab7" class="dtr-sticky-tabs-section">
+                        <div class="dtr-sticky-tabs-content">
+                            <div class="container">
+                                <div class="row">
+
+                                    <!-- Gambar produk -->
+                                    <div class="col-12 col-md-6">
+                                        <img src="assets/images/beras1.jpg" alt="Beras Mata Angin" class="img-fluid">
+                                        <img src="assets/images/beras2.jpg" alt="Beras Mata Angin" class="img-fluid">
+                                        <video class="img-fluid" controls>
+                                            <source src="assets/images/video.mp4" type="video/mp4">
+                                            Browser Anda tidak mendukung pemutar video HTML5.
+                                        </video>
+
+                                    </div>
+
+                                    <!-- Deskripsi produk -->
+                                    <div class="col-12 col-md-6 small-device-space">
+                                        <h4>Foto-foto dan video</h4>
+                                        <div class="dtr-pl-50">
+                                            <p>
+                                                <strong>ini adalah kumpulan foto-foto dan video dari Takim</strong>
+                                            </p>
+
+                                            <a href="https://wa.me/6287848697025"
+                                                class="dtr-btn btn-red dtr-mt-30">Pesan Sekarang via WhatsApp</a>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
                 </div>
             </div>
